--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -49,7 +49,11 @@ input{
 }
 
 .list{
+    height: 300px;
+    width: 300px;
     text-align: left;
+    position: absolute;
+    overflow: auto;
 }
 
 @media (max-width:800px) {
